Fix link wrapping

--- a/src/_includes/header/style.css
+++ b/src/_includes/header/style.css
@@ -89,16 +89,10 @@
 }
 
 .extra-links {
-  display: grid;
-  grid-auto-columns: max-content;
-  grid-auto-flow: column;
-  grid-gap: 1.1em;
+  display: flex;
+  flex-flow: row wrap;
   justify-content: center;
   margin: 4em 0;
-
-  @media (min-width: 320px) {
-    grid-gap: 1.4em;
-  }
 
   @media (min-width: 720px) {
     margin: 0;
@@ -109,12 +103,18 @@
     font-family: 'Google Sans', roboto, sans-serif;
     line-height: normal;
     font-size: 0.8em;
+    margin: 0.5em 0.55em;
+
+    @media (min-width: 320px) {
+      margin: 0.5em 0.7em;
+    }
 
     @media (min-width: 450px) {
       font-size: 1em;
     }
 
     @media (min-width: 720px) {
+      margin: 0 0.7em;
       font-size: 0.8em;
       color: var(--offblack);
       text-decoration: none;
